# sql-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt
include/sql-client/network/: client.hpp  connection_info.hpp
include/sql-client/parser/: query_parser.hpp
scripts/: build.sh  setup.sh
src/: main.cpp
src/network/: client.cpp
src/parser/: query_parser.cpp
